--- a/package.json
+++ b/package.json
@@ -23,5 +23,15 @@
   "bugs": {
     "url": "https://github.com/feroult/yawp-sandbox/issues"
   },
-  "homepage": "https://github.com/feroult/yawp-sandbox#readme"
+  "homepage": "https://github.com/feroult/yawp-sandbox#readme",
+  "devDependencies": {
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.1"
+  }
 }
