--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "YAWP API Sandbox where you can test interacting with a local devserver using YAWP JS client",
   "main": "index.js",
   "scripts": {
+    "setup": "npm install",
+    "build": "webpack",
+    "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
