--- a/package.json
+++ b/package.json
@@ -34,7 +34,11 @@
     "babel-preset-react": "^6.11.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-hot-loader": "^3.0.0-beta.3",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
+  },
+  "dependencies": {
+    "yawp": "^1.0.31"
   }
 }
