--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "webpack-dev-server": "^1.15.1"
   },
   "dependencies": {
+    "brace": "^0.8.0",
+    "react-ace": "^3.5.0",
     "yawp": "^1.0.31"
   }
 }
