--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "setup": "npm install",
     "build": "webpack",
     "start": "webpack-dev-server --hot --inline",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
